mozmeao-fr/nucleus-dev/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nucleus-dev
    type: web
  name: nucleus-dev-web
  namespace: nucleus-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nucleus-dev
      type: web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nucleus-dev
        type: web
      name: nucleus-dev-web
      namespace: nucleus-dev
    spec:
      containers:
      - args:
          - bin/run-prod.sh
        command:
          - /bin/bash
          - -c
        image: mozmeao/nucleus:41236207
        imagePullPolicy: Always
        name: nucleus-dev-web
        livenessProbe:
          failureThreshold: 2
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          httpGet:
            path: /
            scheme: HTTP
            port: 8000
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 1200Mi
          requests:
            cpu: 250m
            memory: 600Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
