mozmeao-fr/nucleus-dev/worker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nucleus-dev
    type: worker
  name: nucleus-dev-worker
  namespace: nucleus-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nucleus-dev
      type: worker
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nucleus-dev
        type: worker
      name: nucleus-dev-worker
      namespace: nucleus-dev
    spec:
      containers:
      - args:
          - bin/run-worker.sh
        command:
          - /bin/bash
          - -c
        image: mozmeao/nucleus:7a35cfaa
        imagePullPolicy: Always
        name: nucleus-dev-worker
        resources:
          limits:
            cpu: 500m
            memory: 1200Mi
          requests:
            cpu: 250m
            memory: 600Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
