mozmeao-fr/nucleus-dev/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: nucleus-dev-ingress
  namespace: nucleus-dev
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: nucleus-dev
    type: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt
  name: nucleus-dev
  namespace: nucleus-dev
spec:
  rules:
    - host: "nucleus.dev.fr.moz.works"
      http:
        paths:
          - backend:
              serviceName: nucleus-dev-ingress
              servicePort: 8000
            path: /
    - host: "nucleus-dev.allizom.org"
      http:
        paths:
          - backend:
              serviceName: nucleus-dev-ingress
              servicePort: 8000
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
      - hosts:
          - "nucleus.dev.fr.moz.works"
          - "nucleus-dev.allizom.org"
        secretName: nucleus-tls
